This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

17-Jul-2003 (Lars Duening)  (3.3.460)
  - (interpret.c) The operators -=, /= and *= can now operate on 
       <int> x <float> values, yielding a <float> result.
  - (prolang.y) Casts with no effect generate a warning.

17-Jul-2003 (Lars Duening)  (3.3.459)
  - (i-svalue_cmp.h) When comparing closures for equality, the result was
       reveresed (reported by Fantom).
  - (array.c, interpret.c) Replaced uses of closure_cmp() with closure_eq()
       where appropriate.

10-Jul-2003 (Lars Duening)  (3.3.458)
  - (interpret.c) When the value stack overflowed during a secure_apply(),
       the secure_apply_error() routine failed to notice that the stack
       elements had already been cleared out (reported by Bardioc).

27-Jun-2003 (Lars Duening)  (3.3.457)
  - (xptmalloc.c) Added a heap_start variable so that assert_stack_gap()
       will compile (reported by Dafire).
  - (ptmalloc) Added Gawain's latest changes - thanks!

26-Jun-2003 (Lars Duening)
  - (interpret.c) Added compile-time check to make sure that MAX_USER_TRACE
       is not larger than MAX_TRACE.

25-Jun-2003 (Lars Duening)  (3.3.456)
  - (xalloc.c) On HP-UX machines, the stack is above the heap and is also
       growing upwards, which the heap/stack check didn't expect. I reworked
       the code to be more generic (reported by Rainer).
  - (lex.c, interpret.c) Characters with the 8th bit set are now uniformly
       treated as positive by the lexer and indexing operations (reported by
       Oskar).
  - (lex.c) Added macro __MAX_MALLOC__ to reflect the MAX_MALLOCED
       parameter (suggested by Coogan).

18-May-2003 (Lars Duening)  (3.3.455)
  - (sprintf.c) Removed a memory leak in efun printf() (reported by Dafire).

07-May-2003 (Lars Duening)  (3.3.454)
  - (simulate.c) The error() routine now takes care to zero out all