@@ -30,7 +30,6 @@
 ;; TODO:: signal errors in the arguments.
 ;; TODO: warnf()s should go to the master as well.
 ;; TODO: member() should get start position.
-;; TODO: rmember()
 ;; TODO: Modify ed() 'M' command to replace all CRs by LFs. Slightly
 ;; TODO:: complex as it requires breaking up the lines.
 ;; TODO: Like Pike: replace() http://caudium.net/developer/pikeref/ex/replace.html
@@ -61,13 +60,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 460)
-(Parent-Version lpmud 3-3 459)
-(Version-Log "The operators -=, *= and /= can now operate on int x float and yield a float result.
-Casts without effect generate a warning.")
+(Project-Version lpmud 3-3 461)
+(Parent-Version lpmud 3-3 460)
+(Version-Log "Made the cast checks more informative.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 17 Jul 2003 01:05:51 -0600")
+(Checkin-Time "Fri, 18 Jul 2003 01:18:12 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -104,8 +102,8 @@ Casts without effect generate a warning.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.67 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.523 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.326 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.524 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.327 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -272,7 +270,7 @@ Casts without effect generate a warning.")
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.18 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.3 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.42 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.43 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.2 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -1103,7 +1101,7 @@ Casts without effect generate a warning.")
   (doc/efun/m_reallocate (lpmud/l/51_m_realloca 1.3 644))
   (doc/efun/m_values (lpmud/c/41_m_values 1.6 644))
   (doc/efun/make_shared_string (lpmud/l/24_make_share 1.2 644))
-  (doc/efun/map (lpmud/l/46_map 1.6.1.5 644))
+  (doc/efun/map (lpmud/l/46_map 1.6.1.6 644))
   (doc/efun/mappingp (lpmud/c/40_mappingp 1.8 644))
   (doc/efun/map_indices (lpmud/m/8_map_indice 1.3.1.2 644))
   (doc/efun/map_objects (lpmud/p/11_map_object 1.1.1.1 644))
@@ -1179,7 +1177,7 @@ Casts without effect generate a warning.")
   (doc/efun/restore_value (lpmud/e/12_restore_va 1.3 644))
   (doc/efun/rm (lpmud/p/51_rm 1.2 644))
   (doc/efun/rmdir (lpmud/q/0_rmdir 1.2 644))
-  (doc/efun/rmember (lpmud/d/b/33_rmember 1.1 644))
+  (doc/efun/rmember (lpmud/d/b/33_rmember 1.2 644))
   (doc/efun/rusage (lpmud/q/1_rusage 1.3 644))
   (doc/efun/save_object (lpmud/q/2_save_objec 1.7 644))
   (doc/efun/save_value (lpmud/e/13_save_value 1.5 644))
