@@ -1,6 +1,9 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+17-Jul-2003 (Lars Duening)  (3.3.461)
+  - (prolang.y) Made the cast checks more informative.
+
 17-Jul-2003 (Lars Duening)  (3.3.460)
   - (interpret.c) The operators -=, /= and *= can now operate on 
        <int> x <float> values, yielding a <float> result.
